# dataidea-logger-backend

./: .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_delete_userprofile.py
accounts/views/: __init__.py  google_auth_views.py  other_views.py
logger/: admin.py  apps.py  models.py  notifications.py  serializers.py  signals.py  urls.py  views.py
logger/migrations/: 0001_initial.py  0002_logmessage_query_logmessage_response.py  0002_project_project_type.py  0003_emailnotificationpreference.py  0003_logmessage_user_id_alter_logmessage_message.py  0004_eventlogmessage_llmlogmessage_delete_logmessage.py  0005_alter_eventlogmessage_api_key_and_more.py
main/: settings.py  urls.py
