[tool.poetry]
name = "dataidea-logger"
version = "0.1.0"
description = "Event logging app"
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
asgiref = "3.8.1"
cachetools = "5.5.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
django = "5.1.7"
django-cors-headers = "4.7.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.5.0"
drf-yasg = "1.21.10"
google-auth = "2.38.0"
gunicorn = "23.0.0"
idna = "3.10"
inflection = "0.5.1"
packaging = "24.2"
psycopg = "3.2.6"
psycopg-pool = "3.2.6"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pyjwt = "2.9.0"
python-dotenv = "1.0.1"
pytz = "2025.1"
pyyaml = "6.0.2"
requests = "2.32.3"
rsa = "4.9"
sqlparse = "0.5.3"
typing-extensions = "4.13.2"
uritemplate = "4.1.1"
urllib3 = "2.3.0"
whitenoise = "6.9.0"
psycopg-binary = "^3.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
